app5.4/manifest/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: exercises
  name: wiki-stub-route
spec:
  parentRefs:
  - name: wiki-stub-gateway
  rules:
  - matches:
    - path:
        type: Exact
        value: /
    backendRefs:
    - name: wiki-stub-svc
      port: 80
